fix: correccion de gap en accesos con disposicion vertical

--- a/src/components/List-group/List-group.stories.scss
+++ b/src/components/List-group/List-group.stories.scss
@@ -2,10 +2,6 @@
   max-width: 324px;
 }
 
-.list-group {
-  gap: 1rem;
-}
-
 .list-group-container-sizes {
   .list-group {
     display: flex;
